--- a/style/css/main.css
+++ b/style/css/main.css
@@ -6,6 +6,7 @@ body {
   text-align: center;
 }
 
+h1,
 h2,
 h3 {
   text-align: center;
@@ -25,6 +26,10 @@ h3 {
 
 .total-information-list .value {
   font-weight: bold;
+}
+
+.section {
+  padding-top: 25px;
 }
 
 /*# sourceMappingURL=main.css.map */
