--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -34,8 +34,10 @@ h3
     font-weight: bold;
 }
 
-.total-information-list
+.info-list
 {
+    padding-left: 20px;
+
     .value
     {
         font-weight: bold;
@@ -45,4 +47,40 @@ h3
 .section
 {
     padding-top: 25px;
+}
+
+.ct-perfect-fourth
+{
+    height: 75vh;
+    overflow: hidden;
+}
+
+.data-table-container,
+.info-block
+{
+    max-height: 75vh;
+    overflow-y: scroll;
+}
+
+.tab-pane
+{
+    padding-top: 15px;
+}
+
+.info-block
+{
+    h3
+    {
+        text-align: left;
+    }
+}
+
+.sortable
+{
+    cursor: pointer;
+}
+
+.ct-series-b .ct-bar, .ct-series-b .ct-line, .ct-series-b .ct-point, .ct-series-b .ct-slice-donut
+{
+    stroke: #28a745;
 }
